--- a/src/cm-payment-review.html
+++ b/src/cm-payment-review.html
@@ -13,7 +13,7 @@
       on-core-error="{{onError}}"
       on-core-complete="{{onComplete}}"></core-ajax>
 
-    <a href="https://services.glgresearch.com/cmpayments/#/"><span class="badge">{{payment_count}}</span> CM Payments</a>
+    <a target="_blank" href="https://services.glgresearch.com/cmpayments/#/"><span class="badge">{{payment_count}}</span> CM Payments</a>
   </template>
   <script src="./cm-payment-review.litcoffee"></script>
 </polymer-element>
