--- a/src/cm-payment-review.html
+++ b/src/cm-payment-review.html
@@ -5,15 +5,15 @@
     
     <core-ajax
       auto
-      url="https://services.glgresearch.com/epiquery/cmpayments/payment_count_by_rm_and_date.mustache"
-      params='{"PERSON_ID":"{{personId}}","lastReviewDate":"{{lastReviewDate}}"}'
+      url="https://services.glgresearch.com/epiquery/cmpayments/comments_for_review_count.mustache"
+      params='{"PERSON_ID":"{{personId}}"}'
       handleAs="json"
       withCredentials="true"
       on-core-response="{{onResponse}}"
       on-core-error="{{onError}}"
       on-core-complete="{{onComplete}}"></core-ajax>
 
-    <a target="_blank" href="https://services.glgresearch.com/cmpayments/#/"><span class="badge">{{payment_count}}</span> CM Payments</a>
+    <a target="_blank" href="https://services.glgresearch.com/cmpayments/#/" title="Unreviewed Council Member Comments."><span class="badge">{{payment_count}}</span> CM Comments</a>
   </template>
   <script src="./cm-payment-review.litcoffee"></script>
 </polymer-element>
