renamed to glg-cm-comments

--- a/demo.html
+++ b/demo.html
@@ -2,11 +2,11 @@
 
 <html>
   <head>
-    <title>glg-compliance-blinky</title>
+    <title>glg-payment-review</title>
     <link rel="import" href="https://services.glgresearch.com/ui-toolkit/polymer.html">
-    <link rel="import" href="src/cm-payment-review.html">
+    <link rel="import" href="src/glg-cm-comments.html">
   </head>
   <body>
-    <cm-payment-review personId="834487"></cm-payment-review>
+    <glg-cm-comments personId="834487"></glg-cm-comments>
   </body>
 </html>
